[package]
name = "notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
comrak = "0.16.0"
ctrlc = "3.2.5"
env_logger = "0.10.0"
handlebars = { version = "3", features = ["dir_source"] }
log = "0.4.17"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
serde = "1.0.154"
serde_json = "1.0.94"
thiserror = "1.0.39"
crossbeam = "0.8.2"
